--- a/app/doc.html
+++ b/app/doc.html
@@ -100,8 +100,8 @@
 
             <div id="collapse[[ @index ]]" class="panel-body panel-collapse collapse">
                 <h4>Description</h4>
-                [[#if this.description.isPresent ]]
-                <span>[[ this.description.get ]]</span>
+                [[#if this.description.isPresent]]
+                <span>[[ description.get ]]</span>
                 [[/if]]
                 <h4>Security</h4>
 
@@ -160,13 +160,13 @@
                         <td><span class="mono">[[this.code]]</span></td>
                         <td>
                             [[#if this.description.isPresent]]
-                            <span class="mono">[[this.description.get]]</span>
+                            <span class="mono">[[description.get]]</span>
                             [[/if]]
                         </td>
                         <td>
                             [[#if this.schema.isPresent]]
                             <div>
-                                [[> schema-partial this.schema.get]]
+                                [[> schema-partial schema.get]]
                             </div>
                             [[/if]]
                         </td>
@@ -184,102 +184,25 @@
 <div class="definitions col-md-8">
     <h2 class="header">Models:</h2>
 
-    <div class="definitions panel panel-primary" th:each="schema : ${api.definitions}">
-        <div class="indented" th:fragment="schemaFragment (schema)">
-            <h3 th:id="${schema.title.isPresent()} ? '/definitions/' + ${schema.title.get()}"
-                th:remove="${schema.title.isPresent()} ? none : all"
-                th:text="${schema.title.isPresent()} ? ${schema.title.get()}">Schema title</h3>
-
-            <div class="mono"><span class="bold">Type: </span><span class="type bold"
-                                                                    th:text="${schema.type.value}"></span></div>
-            <div class="mono" th:remove="${schema.description.isPresent()} ? none : all"><span
-                    class="bold">Description: </span><span th:text="${schema.description.get()}"></span></div>
-
-            <div class="mono" th:switch="${schema.type.name()}">
-                <div th:case="'ONE_OF'">
-                    <ul th:each="oneOfType : ${schema.types}">
-                        <li>
-                            <span th:replace="::schemaFragment (${oneOfType})"></span>
-                        </li>
-                    </ul>
-                </div>
-                <div th:case="'ANY_OF'">
-                    <ul th:each="anyOfType : ${schema.types}">
-                        <li>
-                            <span th:replace="::schemaFragment (${anyOfType})"></span>
-                        </li>
-                    </ul>
-                </div>
-                <div th:case="'REF'">
-                    <span class="bold">Ref: </span><a th:href="${schema.reference}"><span
-                        th:text="${schema.reference}">Schema reference</span></a>
-                </div>
-                <div th:case="'OBJECT'">
-                    <span>{</span>
-                    <ul class="properties" th:each="property : ${schema.properties}">
-                        <li>
-                            <span th:text="${property.name}">Property name<span
-                                    th:remove="${schema.required.contains(property.name)} ? none : all"> (required)</span></span>:&nbsp;
-                            <span th:replace="::schemaFragment (${property.schema})"></span>
-                        </li>
-                    </ul>
-                    <span>}</span>
-                </div>
-                <div th:case="'ARRAY'">
-                    <span class="mono bold">Items: </span><span
-                        th:replace="::schemaFragment (${schema.itemsType})"></span>
-                </div>
-                <div th:case="'STRING'">
-                    <span class="mono" th:remove="${schema.format.isPresent()} ? none : all">
-                        <span class="bold">Format: </span><span th:text="${schema.format.get()}"></span>
-                    </span>
-                    <span class="mono" th:remove="${schema.enumeration.isPresent()} ? none : all">
-                        <span class="bold">Enum: </span><span th:text="${schema.enumeration.get()}"></span>
-                    </span>
-                    <span class="mono" th:remove="${schema.pattern.isPresent()} ? none : all">
-                        <span class="bold">Pattern: </span><span th:text="${schema.pattern.get()}"></span>
-                    </span>
-                    <span class="mono" th:remove="${schema.minLength.isPresent()} ? none : all">
-                        <span class="bold">MinLength: </span><span th:text="${schema.minLength.get()}"></span>
-                    </span>
-                    <span class="mono" th:remove="${schema.maxLength.isPresent()} ? none : all">
-                        <span class="bold">MaxLength: </span><span th:text="${schema.maxLength.get()}"></span>
-                    </span>
-                </div>
-                <div th:case="'BOOLEAN'">
-                </div>
-                <div th:case="*"> <!-- NUMBER, INTEGER -->
-                    <span class="mono" th:remove="${schema.format.isPresent()} ? none : all">
-                        <span class="bold">Format: </span><span th:text="${schema.format.get()}"></span>
-                    </span>
-                    <span class="mono" th:remove="${schema.enumeration.isPresent()} ? none : all">
-                        <span class="bold">Enum: </span><span th:text="${schema.enumeration.get()}"></span>
-                    </span>
-                    <span class="mono" th:remove="${schema.multipleOf.isPresent()} ? none : all">
-                        <span class="bold">MultipleOf: </span><span th:text="${schema.multipleOf.get()}"></span>
-                    </span>
-                    <span class="mono" th:remove="${schema.minimum.isPresent()} ? none : all">
-                        <span class="bold">Minimum: </span><span th:text="${schema.minimum.get()}"></span>
-                    </span>
-                    <span class="mono" th:remove="${schema.maximum.isPresent()} ? none : all">
-                        <span class="bold">Maximum: </span><span th:text="${schema.maximum.get()}"></span>
-                    </span>
-                </div>
-            </div>
-        </div>
+    [[#each api.definitions]]
+    <div class="definitions panel panel-primary">
+        [[> schema-partial this]]
     </div>
+    [[/each]]
 </div>
 
 <div class="security-schemes col-md-8">
     <h2 class="header">Security schemes:</h2>
 
-    <div class="securitySchemes panel panel-primary" th:each="security : ${api.securitySchemes}">
-        <h3 th:id="'/security/' + ${security.title}" th:text="${security.title}"></h3>
+    [[#each api.securitySchemes]]
+    <div class="securitySchemes panel panel-primary">
+        <h3 id="/security/[[this.title]]">[[this.title]]</h3>
 
-        <div class="mono"><span class="bold">Type: </span><span th:text="${security.type}"></span></div>
-        <div class="mono"><span class="bold">In: </span><span th:text="${security.locatedIn}"></span></div>
-        <div class="mono"><span class="bold">Name: </span><span th:text="${security.name}"></span></div>
+        <div class="mono"><span class="bold">Type: </span><span>[[this.type]]</span></div>
+        <div class="mono"><span class="bold">In: </span><span>[[this.locatedIn]]</span></div>
+        <div class="mono"><span class="bold">Name: </span><span>[[this.name]]</span></div>
     </div>
+    [[/each]]
 </div>
 
 
